--- a/index.html
+++ b/index.html
@@ -3,28 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Banco de imagens</title>
 </head>
 <body>
-    <header>
-        <div></div>
-        <div>
-            <h1></h1>
-            <button></button><button></button><button></button><button></button><button></button>
+    <header id="topo">
+        <div id="topo-sub-1">
+            <img src="" alt="">
+            <div>
+                <button>Explore</button>
+            </div>
+            <div>
+                <button>Log in</button>
+                <button>Join</button>
+                <button>Upload</button>
+            </div>
+        </div>
+        <div id="topo-sub-2">
+            <h1>Stunning royalty-free images & royalty-free stock</h1>
+            <div>
+                <button>Floresta</button>
+                <button>Praia</button>
+                <button>Esporte</button>
+                <button>Montanha</button>
+                <button>Animais</button>
+            </div>
             <input type="text" onkeyup="verificarEnter(event)">
         </div>
     </header>
 
     <main>
         <div>
-            <h2></h2>
+            <h2>Over 5.8 million+ hight quality stock images, videos and music shared by our talented community.</h2>
             <div>
-                <button></button><button></button><button></button>
+                <button>Editor's Choice</button>
+                <button>Latest</button>
+                <button>Trending</button>
             </div>
+            <div id="imagens"></div>
         </div>
 
         <section></section>
     </main>
-    <footer></footer>
+    <footer>Todos os direitos reservados</footer>
 </body>
 </html>
