Ajustes na estrutura HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <header id="topo">
         <div id="topo-sub-1">
-            <img src="" alt="">
+            <a href="">
+                <img src="./img/logo.png" style="width: 200px; height: 100px;" alt="Logo do site">
+            </a>
             <div>
                 <button>Explore</button>
             </div>
@@ -27,7 +29,11 @@
                 <button>Montanha</button>
                 <button>Animais</button>
             </div>
-            <input type="text" onkeyup="verificarEnter(event)">
+            <div>
+                <button></button>
+                <input type="text" onkeyup="verificarEnter(event)">
+                <button></button>
+            </div>
         </div>
     </header>
 
