Ajustes no h=<header>

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
+    <script src="script.js" defer></script>
     <title>Banco de imagens</title>
 </head>
+
 <body>
     <header id="topo">
         <div id="topo-sub-1">
@@ -12,12 +16,14 @@
                 <img src="./img/logo.png" style="width: 200px; height: 100px;" alt="Logo do site">
             </a>
             <div>
-                <button>Explore</button>
-            </div>
-            <div>
-                <button>Log in</button>
-                <button>Join</button>
-                <button>Upload</button>
+                <div>
+                    <button>Explore</button>
+                </div>
+                <div>
+                    <button>Log in</button>
+                    <button>Join</button>
+                    <button>Upload</button>
+                </div>
             </div>
         </div>
         <div id="topo-sub-2">
@@ -52,4 +58,5 @@
     </main>
     <footer>Todos os direitos reservados</footer>
 </body>
+
 </html>
