Aplicado folha de estilo CSS no <header>

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
     <script src="script.js" defer></script>
+   <script src="https://kit.fontawesome.com/53ea2df9af.js" crossorigin="anonymous"></script>
     <title>Banco de imagens</title>
 </head>
 
 <body>
     <header id="topo">
-        <div id="topo-sub-1">
-            <a href="">
+        
+        <div id="topo-sub-1"> <!--Início topo-sub-1-->
+            <a href="index.html">
                 <img src="./img/logo.png" style="width: 200px; height: 100px;" alt="Logo do site">
             </a>
             <div>
@@ -25,22 +27,23 @@
                     <button>Upload</button>
                 </div>
             </div>
-        </div>
-        <div id="topo-sub-2">
+        </div><!--Fim topo-sub-1-->
+        
+        <div id="topo-sub-2"> <!--Início topo-sub-2-->
             <h1>Stunning royalty-free images & royalty-free stock</h1>
-            <div>
+            <div id="topo-sub-2-buttons">
                 <button>Floresta</button>
                 <button>Praia</button>
                 <button>Esporte</button>
                 <button>Montanha</button>
                 <button>Animais</button>
             </div>
-            <div>
-                <button></button>
+            <div id="topo-sub-2-input">
+                <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 <input type="text" onkeyup="verificarEnter(event)">
                 <button></button>
             </div>
-        </div>
+        </div> <!--Fim topo-sub-2-->
     </header>
 
     <main>
